# artifact-HLUT-TCHES

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md
bench/HLUT-rs/: Cargo.toml
bench/HLUT-rs/src/: cli.rs  decomposition.rs  files.rs  main.rs
bench/bench_cjp/cjp/: Cargo.toml
bench/bench_cjp/cjp/src/: main.rs
bench/bench_tree_pbs/: Cargo.toml
bench/bench_tree_pbs/src/: main.rs
bench/bench_woppbs/tfhe/: Cargo.toml
bench/bench_woppbs/tfhe/benches/float_wopbs/: bench.rs
bench/bench_woppbs/tfhe/benches/woppbs_hlut/: bench.rs
bench/bench_woppbs/tfhe/src/float_wopbs/client_key/: mod.rs
bench/bench_woppbs/tfhe/src/float_wopbs/server_key/: mod.rs
bench/bench_woppbs/tfhe/src/shortint/wopbs/: mod.rs
bench/tfhe-rs-odd/tfhe/src/core_crypto/algorithms/: lwe_packing_keyswitch_key_generation.rs
data/paper/: cjp21.json  timings_hlut-128.json  timings_hlut-40.json  timings_hlut_partial_evaluations-40.json  timings_tbm.json  timings_wop-pbs.json
data/paper/correlation_margin_ranks/: results.pickle
data/paper/encodings/: data.pickle
data/paper/ranks/: gamma_1.05.pickle  gamma_1.1.pickle  gamma_1.pickle
data/paper/shapes/: data.json  shapes.json
decomposer/: pyproject.toml  requirements.txt
decomposer/src/decomposer/: atomic_function.py  chain.py  decomposition.py  encoding.py  experiments.py  gauss.py  search.py  shape_decomposition.py
decomposer/src/decomposer/plots/: format_tables_of_results.py  format_woppbs_data.py  loggers.py
decomposer/src/decomposer/plots/figure_correlation_margin_rank/: figure_correlation.py
decomposer/src/decomposer/plots/figure_multi_outputs/: plot_figure_multi_outputs.py
decomposer/src/decomposer/plots/figure_perfs_encodings/: export_latex.py
decomposer/src/decomposer/plots/figure_ranks/: plot_figure_ranks.py
decomposer/src/decomposer/plots/figure_results/: plot_figure_results.py
decomposer/src/decomposer/utils/: parameters.py  utils.py
decomposer/src/gauss_elimination_rs/: Cargo.toml
decomposer/src/gauss_elimination_rs/src/: lib.rs
decompositions/paper/: betas_17_2  betas_17_3  betas_3_10  betas_3_11  betas_3_12  betas_3_13  betas_3_14  betas_3_4  betas_3_5  betas_3_6  betas_3_7  betas_3_8  betas_3_9  betas_5_2  betas_5_3  betas_5_4  betas_5_5  betas_5_6  betas_5_7  d_17_2  d_17_3  d_3_10  d_3_11  d_3_12  d_3_13  d_3_14  d_3_4  d_3_5  d_3_6  d_3_7  d_3_8  d_3_9  d_5_2  d_5_3  d_5_4  d_5_5  d_5_6  d_5_7  encodings_17_2  encodings_17_3  (+74 more)
parameters/: optimizer_cjp_odd-128.csv  optimizer_cjp_odd-40.csv
(+5 files in other folders)
