[package]
name = "HLUT-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = {path="../tfhe-rs-odd/tfhe", features= ["gadget", "boolean", "x86_64-unix"]}
concrete-csprng = {path='../tfhe-rs-odd/concrete-csprng'}
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
clap = { version = "4.5.48", features = ["derive"] }
rayon = "1.12.0"
